added get all users endpoint